# src/usuarios/dto/create-usuario.dto.ts
@@ -30,4 +30,9 @@ export class CreateUsuarioDto {
   @IsOptional()
   @IsString()
   countryCode?: string;
+
+  @ApiPropertyOptional({ example: 'Soy desarrollador backend con experiencia en NestJS y TypeScript.' })
+  @IsOptional()
+  @IsString()
+  profileText?: string;
 }
